--- a/en/privacy.html
+++ b/en/privacy.html
@@ -233,7 +233,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Upon reasonable requests from public authorities authorized to
               request and receive such data.
             </p>
@@ -241,9 +241,8 @@
           <li>
             <div
               class="lineBeforeLi"
-              style="margin-top: 1.3vw; width: 21px"
             ></div>
-            <p>
+            <p class="before_text">
               In case the user, in the opinion of the site administration,
               violates the provisions of this policy or other contracts and
               agreements concluded between the site and the user, as well as the
