--- a/de/privacy.html
+++ b/de/privacy.html
@@ -71,14 +71,14 @@
           <li>
             <p>
               <span class="colorSpan">SD Production</span> (im Folgenden
-              "<span>wir</span>", "<span>uns</span>" oder "<span>unser</span>")
+              "wir", "uns" oder "unser")
               respektiert die Privatsphäre der Nutzer (im Folgenden
-              "<span>Sie</span>" oder "<span>Nutzer</span>") und unternimmt alle
+              "Sie" oder "Nutzer") und unternimmt alle
               Anstrengungen, die persönlichen Daten, die Sie uns zur Verfügung
               stellen, zu schützen. Diese Datenschutzrichtlinie beschreibt
               unsere Praktiken in Bezug auf die Erfassung, Verwendung und
               Offenlegung Ihrer Daten bei der Nutzung unserer Websites,
-              Anwendungen und Dienste (zusammenfassend als "<span>Daten</span>"
+              Anwendungen und Dienste (zusammenfassend als "Daten"
               bezeichnet).
             </p>
           </li>
@@ -86,7 +86,7 @@
             <p>
               <span class="colorSpan">Daten</span> sind alle Informationen, die
               sich direkt oder indirekt auf die Nutzer
-              <span>der Website beziehen</span>.
+              der Website beziehen.
             </p>
           </li>
         </ul>
@@ -98,18 +98,18 @@
         <ul class="privacyText">
           <li>
             <div class="lineBeforeLi"></div>
-            <p>Vollständiger Name, Telefonnummer, E-Mail Adresse.</p>
+            <p class="before_text">Vollständiger Name, Telefonnummer, E-Mail Adresse.</p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Nutzerinformationen bei der Beauftragung von Dienstleistungen auf
               der Website.
             </p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Daten über Geräte und deren Nutzung: IP-Adresse, Uhrzeit, Datum
               der Nutzung der Website durch den Nutzer, Software, sowie Browser,
               Betriebssystem und andere Daten, die der Nutzer preisgibt.
@@ -117,7 +117,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Daten aus Umfragen zur Verbesserung der Dienstleistungen für die
               Nutzer; Informationen, die die Website im Rahmen von
               Marketingaktivitäten erhält.
@@ -125,7 +125,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Informationen, die von Nutzern auf der Grundlage der Ergebnisse
               ihrer Dienste, Rückmeldungen, Kommentare, Supportanfragen,
               Beschwerden, Klagen und sonstigen Anfragen veröffentlicht werden.
@@ -246,7 +246,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Auf begründete Anfragen von Behörden, die berechtigt sind, solche
               Daten anzufordern und zu erhalten.
             </p>
@@ -254,9 +254,8 @@
           <li>
             <div
               class="lineBeforeLi"
-              style="margin-top: 1.3vw; width: 21px"
             ></div>
-            <p>
+            <p class="before_text">
               Wenn der Nutzer nach Ansicht der Website-Verwaltung gegen die
               Bestimmungen dieser Politik oder andere zwischen der Website und
               dem Nutzer geschlossene Verträge und Vereinbarungen sowie gegen
