--- a/en/privacy.html
+++ b/en/privacy.html
@@ -70,20 +70,20 @@
           <li>
             <p>
               <span class="colorSpan">SD Production</span> (hereinafter
-              "<span>we</span>", "<span>us</span>" or "<span>our</span>")
-              respects the privacy of users (hereinafter "<span>you</span>" or
-              "<span>user</span>") and makes every effort to protect the
+              "we", "us" or "our")
+              respects the privacy of users (hereinafter "you" or
+              "user") and makes every effort to protect the
               personal information you choose to provide to us. This Privacy
               Policy describes our practices regarding the collection, use and
               disclosure of your information through your use of our websites,
-              applications and services (collectively, the "<span>Data</span>").
+              applications and services (collectively, the "Data").
             </p>
           </li>
           <li>
             <p>
               <span class="colorSpan">Data</span> is any information that is
               directly or indirectly related to the
-              <span>users of the website.</span>
+              users of the website.
             </p>
           </li>
         </ul>
