--- a/de/privacy.html
+++ b/de/privacy.html
@@ -66,6 +66,12 @@
       <!-- Privacy Policy -->
 
       <section id="organicShop" style="margin-top: 2.5vw">
+         <div class="return_header">
+         <a href="../de/home.html">
+            <div class="go_home"></div>
+           <p>Zurück zum Startbildschirm</p>
+         </a>
+       </div>
         <h3>Datenschutz</h3>
         <ul class="privacyText">
           <li>
