--- a/en/privacy.html
+++ b/en/privacy.html
@@ -62,9 +62,16 @@
       </div>
     </header>
     <main>
-      <!-- Privacy Policy -->
 
+      <!-- Privacy Policy -->
+      
       <section id="organicShop" style="margin-top: 2.5vw">
+        <div class="return_header">
+         <a href="../en/home.html">
+            <div class="go_home"></div>
+           <p>Back to home screen</p>
+         </a>
+       </div>
         <h3>Privacy <span class="borderText">Policy</span></h3>
         <ul class="privacyText">
           <li>
