--- a/de/privacy.html
+++ b/de/privacy.html
@@ -202,7 +202,7 @@
           </li>
           <li>
             <p>
-              <span class="colorSpan lineUnder">
+              <span class="colorSpan">
                 Die Website verarbeitet keine Daten, die sich auf Rasse,
                 Nationalität, politische Meinungen, religiöse oder andere
                 Überzeugungen oder die Mitgliedschaft in öffentlichen
@@ -380,7 +380,7 @@
               Sicherheit und dem Schutz seiner Daten und Autorisierungsdaten,
               wie z.B. Passwort, Login, Dritte unbefugten Zugang zu seinem Konto
               und seinen Nutzerdaten erhalten können.
-              <span class="colorSpan lineUnder">
+              <span class="colorSpan">
                 Die Website haftet nicht für Schäden, die durch einen solchen
                 Zugang verursacht werden.
               </span>
