--- a/en/privacy.html
+++ b/en/privacy.html
@@ -194,7 +194,7 @@
           </li>
           <li>
             <p>
-              <span class="colorSpan lineUnder"
+              <span class="colorSpan"
                 >The website does not process data relating to race,
                 nationality, political opinions, religious and other beliefs or
                 membership of public associations. Information about the
@@ -357,7 +357,7 @@
               and protection of his data and data for authorisation, such as
               password, login, third parties may gain unauthorised access to his
               account and user data.
-              <span class="colorSpan lineUnder"
+              <span class="colorSpan"
                 >The site is not liable for damages caused by such access.</span
               >
             </p>
