--- a/de/home.html
+++ b/de/home.html
@@ -39,7 +39,7 @@
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
       </div>
-      <div class="HamburgerMenu hide">
+      <!-- <div class="HamburgerMenu hide">
         <img
           class="HamburgerMenuButton"
           src="../img/HamburgerMenu.svg"
@@ -51,13 +51,13 @@
             src="../img/closeAction.svg"
             alt=""
           />
-          <ul>
+          <ul> -->
             <!-- <li><a href="../de/home.html#">Held</a></li>
             <li><a href="../de/home.html#projects">Projekte</a></li>
             <li><a href="../de/home.html#services">Dienste</a></li>
             <li><a href="../de/home.html#ourTeam">Team</a></li>
             <li><a href="../de/home.html#contentUs">Kontakt</a></li> -->
-            <li>
+            <!-- <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/home.html">EN</a></button>
                 <div></div>
@@ -66,7 +66,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </header>
 
     <main class="desktop">
