--- a/en/home.html
+++ b/en/home.html
@@ -38,7 +38,7 @@
         </ul>
         <img class="langImg" src="../img/Arrow.svg" alt="" />
       </div>
-      <div class="HamburgerMenu hide">
+      <!-- <div class="HamburgerMenu hide">
         <img
           class="HamburgerMenuButton"
           src="../img/HamburgerMenu.svg"
@@ -50,13 +50,13 @@
             src="../img/closeAction.svg"
             alt=""
           />
-          <ul>
+          <ul> -->
             <!-- <li><a href="../en/home.html#">Hero</a></li>
             <li><a href="../en/home.html#projects">Projects</a></li>
             <li><a href="../en/home.html#services">Services</a></li>
             <li><a href="../en/home.html#ourTeam">Team</a></li>
             <li><a href="../en/home.html#contentUs">Contact</a></li> -->
-            <li>
+            <!-- <li>
               <div class="HamburgerMenuContainerLanguage">
                 <button><a href="../en/home.html">EN</a></button>
                 <div></div>
@@ -65,7 +65,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </header>
 
     <main class="desktop">
