--- a/de/home.html
+++ b/de/home.html
@@ -215,7 +215,7 @@
 
       <section id="ourTeam">
         <div class="slider-name">
-          <h2>Unser<span class="borderText">Team</span></h2>
+          <h2>Unser <span class="borderText">Team</span></h2>
           <div>
             <div class="swiper-button-prev-custom"></div>
             <div class="swiper-button-next-custom"></div>
@@ -405,7 +405,7 @@
       <section id="contentUs">
         <div class="adoutUs">
           <h2>
-            Bestellen <span class="borderText">Sie Ihr</span> Projekt jetzt
+            Bestellen <span class="borderText"> Sie Ihr </span> Projekt jetzt
           </h2>
           <p class="adoutUsText">
             Wir sind ein multidisziplinäres Team, das die besten Websites für
@@ -1194,7 +1194,7 @@
       <section id="contentUs">
         <div class="adoutUs">
           <h2>
-            Bestellen <span class="borderText">Sie Ihr</span>Projekt jetzt
+            Bestellen <span class="borderText">Sie Ihr </span> Projekt jetzt
           </h2>
           <p class="adoutUsText">
             Wir sind ein multidisziplinäres Team, das die besten Websites für
@@ -1239,39 +1239,36 @@
       </section>
     </main>
 
-    <footer class="desktop">
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
+    <footer class="desktop" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
           <li><a href="#projects">Projekte</a></li>
           <li><a href="#services">Dienste</a></li>
           <li><a href="#ourTeam">Team</a></li>
-          <li><a href="#contentUs">Kontaktiere uns</a></li>
+          <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>
-            <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          </li>
-          <li>© 2023 Alle Rechte vorbehalten.li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
     </footer>
-    <footer class="tablet">
+    <footer class="tablet" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <!-- <ul class="navigator">
           <li><a href="#projects">Projekte</a></li>
           <li><a href="#services">Dienste</a></li>
           <li><a href="#ourTeam">Team</a></li>
-          <li><a href="#contentUs">kontaktiere uns</a></li>
+          <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>
-            <a href="../de/privacy.html" style="text-decoration: underline"
-              >Datenschutzrichtlinie</a
-            >
-          </li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
           <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -1281,15 +1278,10 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>
-            <a href="../de/privacy.html" style="text-decoration: underline"
-              >Datenschutzrichtlinie</a
-            >
-          </li>
-          <li>
-            <br />
-            © 2023 Alle Rechte vorbehalten.
-          </li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img
