--- a/de/pagesShop.html
+++ b/de/pagesShop.html
@@ -190,7 +190,7 @@
         <section id="contentUs">
           <div class="adoutUs">
             <h2>
-              Bestellen <span class="borderText">Sie Ihr</span>Projekt jetzt
+              Bestellen <span class="borderText">Sie Ihr </span> Projekt jetzt
             </h2>
             <p class="adoutUsText">
               Wir sind ein multidisziplinäres Team, das die besten Websites für
@@ -334,8 +334,7 @@
       </div>
     </main>
 
-    <footer class="desktop">
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
+    <footer class="desktop" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -345,12 +344,14 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
     </footer>
-    <footer class="tablet">
+    <footer class="tablet" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <!-- <ul class="navigator">
@@ -360,8 +361,10 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
@@ -370,8 +373,10 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img
@@ -380,6 +385,7 @@
         alt=""
       />
     </footer>
+
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
