--- a/de/privacy.html
+++ b/de/privacy.html
@@ -66,33 +66,30 @@
       <!-- Privacy Policy -->
 
       <section id="organicShop" style="margin-top: 2.5vw">
-         <div class="return_header">
-         <a href="../de/home.html">
+        <div class="return_header">
+          <a href="../de/home.html">
             <div class="go_home"></div>
-           <p>Zurück zum Startbildschirm</p>
-         </a>
-       </div>
+            <p>Zurück zum Startbildschirm</p>
+          </a>
+        </div>
         <h3>Datenschutz</h3>
         <ul class="privacyText">
           <li>
             <p>
-              <span class="colorSpan">SD Production</span> (im Folgenden
-              "wir", "uns" oder "unser")
-              respektiert die Privatsphäre der Nutzer (im Folgenden
-              "Sie" oder "Nutzer") und unternimmt alle
-              Anstrengungen, die persönlichen Daten, die Sie uns zur Verfügung
-              stellen, zu schützen. Diese Datenschutzrichtlinie beschreibt
-              unsere Praktiken in Bezug auf die Erfassung, Verwendung und
-              Offenlegung Ihrer Daten bei der Nutzung unserer Websites,
-              Anwendungen und Dienste (zusammenfassend als "Daten"
-              bezeichnet).
+              <span class="colorSpan">SD Production</span> (im Folgenden "wir",
+              "uns" oder "unser") respektiert die Privatsphäre der Nutzer (im
+              Folgenden "Sie" oder "Nutzer") und unternimmt alle Anstrengungen,
+              die persönlichen Daten, die Sie uns zur Verfügung stellen, zu
+              schützen. Diese Datenschutzrichtlinie beschreibt unsere Praktiken
+              in Bezug auf die Erfassung, Verwendung und Offenlegung Ihrer Daten
+              bei der Nutzung unserer Websites, Anwendungen und Dienste
+              (zusammenfassend als "Daten" bezeichnet).
             </p>
           </li>
           <li>
             <p>
               <span class="colorSpan">Daten</span> sind alle Informationen, die
-              sich direkt oder indirekt auf die Nutzer
-              der Website beziehen.
+              sich direkt oder indirekt auf die Nutzer der Website beziehen.
             </p>
           </li>
         </ul>
@@ -104,7 +101,9 @@
         <ul class="privacyText">
           <li>
             <div class="lineBeforeLi"></div>
-            <p class="before_text">Vollständiger Name, Telefonnummer, E-Mail Adresse.</p>
+            <p class="before_text">
+              Vollständiger Name, Telefonnummer, E-Mail Adresse.
+            </p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
@@ -202,7 +201,7 @@
           </li>
           <li>
             <p>
-              <span class="colorSpan">
+              <span class="colorSpan underLine">
                 Die Website verarbeitet keine Daten, die sich auf Rasse,
                 Nationalität, politische Meinungen, religiöse oder andere
                 Überzeugungen oder die Mitgliedschaft in öffentlichen
@@ -258,9 +257,7 @@
             </p>
           </li>
           <li>
-            <div
-              class="lineBeforeLi"
-            ></div>
+            <div class="lineBeforeLi"></div>
             <p class="before_text">
               Wenn der Nutzer nach Ansicht der Website-Verwaltung gegen die
               Bestimmungen dieser Politik oder andere zwischen der Website und
@@ -380,7 +377,7 @@
               Sicherheit und dem Schutz seiner Daten und Autorisierungsdaten,
               wie z.B. Passwort, Login, Dritte unbefugten Zugang zu seinem Konto
               und seinen Nutzerdaten erhalten können.
-              <span class="colorSpan">
+              <span class="colorSpan underLine">
                 Die Website haftet nicht für Schäden, die durch einen solchen
                 Zugang verursacht werden.
               </span>
@@ -389,6 +386,58 @@
         </ul>
       </section>
     </main>
+
+    <footer class="desktop" style="margin: 0 0 3.13vw 0;">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <ul class="navigator">
+          <li><a href="#projects">Projekte</a></li>
+          <li><a href="#services">Dienste</a></li>
+          <li><a href="#ourTeam">Team</a></li>
+          <li><a href="#contentUs">Kontakt</a></li>
+        </ul>
+        <ul class="mediaInfo">
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
+        </ul>
+      </div>
+    </footer>
+    <footer class="tablet" style="margin: 16.13vw 0 0 0;">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <!-- <ul class="navigator">
+          <li><a href="#projects">Projekte</a></li>
+          <li><a href="#services">Dienste</a></li>
+          <li><a href="#ourTeam">Team</a></li>
+          <li><a href="#contentUs">Kontakt</a></li>
+        </ul> -->
+        <ul class="mediaInfo">
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
+        </ul>
+      </div>
+      <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
+    </footer>
+    <footer class="mobile">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <ul class="mediaInfo">
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
+        </ul>
+      </div>
+      <img
+        class="mainImgMobile backgroundFooter"
+        src="../img/Ellipse.svg"
+        alt=""
+      />
+    </footer>
 
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
