--- a/en/privacy.html
+++ b/en/privacy.html
@@ -62,35 +62,32 @@
       </div>
     </header>
     <main>
-
       <!-- Privacy Policy -->
-      
+
       <section id="organicShop" style="margin-top: 2.5vw">
         <div class="return_header">
-         <a href="../en/home.html">
+          <a href="../en/home.html">
             <div class="go_home"></div>
-           <p>Back to home screen</p>
-         </a>
-       </div>
+            <p>Back to home screen</p>
+          </a>
+        </div>
         <h3>Privacy <span class="borderText">Policy</span></h3>
         <ul class="privacyText">
           <li>
             <p>
-              <span class="colorSpan">SD Production</span> (hereinafter
-              "we", "us" or "our")
-              respects the privacy of users (hereinafter "you" or
-              "user") and makes every effort to protect the
-              personal information you choose to provide to us. This Privacy
-              Policy describes our practices regarding the collection, use and
-              disclosure of your information through your use of our websites,
-              applications and services (collectively, the "Data").
+              <span class="colorSpan">SD Production</span> (hereinafter "we",
+              "us" or "our") respects the privacy of users (hereinafter "you" or
+              "user") and makes every effort to protect the personal information
+              you choose to provide to us. This Privacy Policy describes our
+              practices regarding the collection, use and disclosure of your
+              information through your use of our websites, applications and
+              services (collectively, the "Data").
             </p>
           </li>
           <li>
             <p>
               <span class="colorSpan">Data</span> is any information that is
-              directly or indirectly related to the
-              users of the website.
+              directly or indirectly related to the users of the website.
             </p>
           </li>
         </ul>
@@ -106,7 +103,9 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p class="before_text">User information when contracting services on the website.</p>
+            <p class="before_text">
+              User information when contracting services on the website.
+            </p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
@@ -194,7 +193,7 @@
           </li>
           <li>
             <p>
-              <span class="colorSpan"
+              <span class="colorSpan underLine"
                 >The website does not process data relating to race,
                 nationality, political opinions, religious and other beliefs or
                 membership of public associations. Information about the
@@ -246,9 +245,7 @@
             </p>
           </li>
           <li>
-            <div
-              class="lineBeforeLi"
-            ></div>
+            <div class="lineBeforeLi"></div>
             <p class="before_text">
               In case the user, in the opinion of the site administration,
               violates the provisions of this policy or other contracts and
@@ -357,7 +354,7 @@
               and protection of his data and data for authorisation, such as
               password, login, third parties may gain unauthorised access to his
               account and user data.
-              <span class="colorSpan"
+              <span class="colorSpan underLine"
                 >The site is not liable for damages caused by such access.</span
               >
             </p>
@@ -365,6 +362,64 @@
         </ul>
       </section>
     </main>
+
+    <footer class="desktop" style="margin: 0 0 3.13vw 0;">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <ul class="navigator">
+          <li><a class="navigatorLink" href="#projects">Projects</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#ourTeam">Team</a></li>
+          <li><a href="#contentUs">Contact</a></li>
+        </ul>
+        <ul class="mediaInfo">
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
+          <li>© 2023 All rights reserved.</li>
+        </ul>
+      </div>
+    </footer>
+    <footer class="tablet" style="margin: 16.13vw 0 0 0;">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <ul class="navigator">
+          <!-- <li><a href="#projects">Projects</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#ourTeam">Team</a></li>
+          <li><a href="#contentUs">Contact</a></li> -->
+        </ul>
+        <ul class="mediaInfo">
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
+          <li>© 2023 All rights reserved.</li>
+        </ul>
+      </div>
+      <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
+    </footer>
+    <footer class="mobile">
+      <img class="logo" src="../img/logo.svg" alt="" />
+      <div class="footerInfo">
+        <ul class="mediaInfo">
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
+          <li>© 2023 All rights reserved.</li>
+        </ul>
+      </div>
+      <img
+        class="mainImgMobile backgroundFooter"
+        src="../img/Ellipse.svg"
+        alt=""
+      />
+    </footer>
 
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
