--- a/de/abi.html
+++ b/de/abi.html
@@ -170,7 +170,7 @@
         <section id="contentUs">
           <div class="adoutUs">
             <h2>
-              Bestellen <span class="borderText">Sie Ihr</span>Projekt jetzt
+              Bestellen <span class="borderText">Sie Ihr </span> Projekt jetzt
             </h2>
             <p class="adoutUsText">
               Wir sind ein multidisziplinäres Team, das die besten Websites für
@@ -314,8 +314,7 @@
       </div>
     </main>
 
-    <footer class="desktop">
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
+    <footer class="desktop" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -325,23 +324,27 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
     </footer>
-    <footer class="tablet">
+    <footer class="tablet" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
-        <ul class="navigator">
+        <!-- <ul class="navigator">
           <li><a href="#projects">Projekte</a></li>
           <li><a href="#services">Dienste</a></li>
           <li><a href="#ourTeam">Team</a></li>
           <li><a href="#contentUs">Kontakt</a></li>
-        </ul>
+        </ul> -->
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
@@ -350,8 +353,10 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img
@@ -360,6 +365,7 @@
         alt=""
       />
     </footer>
+
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/abi.js"></script>
