--- a/de/briliniStudio.html
+++ b/de/briliniStudio.html
@@ -154,7 +154,7 @@
         <section id="contentUs">
           <div class="adoutUs">
             <h2>
-              Bestellen <span class="borderText">Sie Ihr</span>Projekt jetzt
+              Bestellen <span class="borderText">Sie Ihr </span> Projekt jetzt
             </h2>
             <p class="adoutUsText">
               Wir sind ein multidisziplinäres Team, das die besten Websites für
@@ -298,8 +298,7 @@
       </div>
     </main>
 
-    <footer class="desktop">
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
+    <footer class="desktop" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="navigator">
@@ -309,13 +308,14 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
     </footer>
-
-    <footer class="tablet">
+    <footer class="tablet" >
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <!-- <ul class="navigator">
@@ -325,19 +325,22 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
     </footer>
-
     <footer class="mobile">
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
-          <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
+          <a href="../de/privacy.html" style="text-decoration: underline"
+            >Datenschutzrichtlinie</a
+          >
+          <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
       <img
